# medical-stats-research-assistant-for-claude-code

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_DELIVERY_REPORT.md  LICENSE  README.md  SECURITY.md  config.local.yaml.example  final_verify.py  install.ps1  install.sh  manifest.json  overview.md  push-public.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  uninstall.ps1  uninstall.sh
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.darwin-results/: results.tsv
.github/: dependabot.yml
.github/workflows/: ci.yml
.msra/: results.tsv
.sdd/: task-3-report.md
MSRA/data/: .gitkeep
MSRA/passport/: passport.json
agents/: AGENTS.md  code_executor_agent.md  data_validator_agent.md  exec_inference_agent.md  exec_runner_agent.md  method_consultant_agent.md  multi_agent_specification.md  protocol.md  qc_inspector_agent.md
agents/core/: __init__.py  base_agent.py  cache.py  communication.py  conflict_resolution.py  interfaces.py  monitor.py  registry.py
agents/examples/: quick_start.py
agents/extensions/: GIT_CONVENTION.md  README.md  git_workflow.py  msra_external.py
agents/implementations/: __init__.py  data_validator_agent.py  exec_inference_agent.py  exec_runner_agent.py  hybrid_mode_bridge.py  method_consultant_agent.py  qc_inspector_agent.py
commands/: ars-abstract.md  ars-citation-check.md  ars-disclosure.md  ars-format-convert.md  ars-full.md  ars-lit-review.md  ars-outline.md  ars-paper.md  ars-plan.md  ars-revision-coach.md  ars-revision.md  msra-calibrate.md  msra-data.md  msra-exec.md  msra-explore.md  msra-full.md  msra-modules.md  msra-paper.md  msra-plan.md  msra-report.md  msra-reviewer.md  msra-status.md  msra-write.md  msra.md
deliverables/engineering-assurance/: file-cleanup-assessment-msra-2026-06-25.md  file-cleanup-executed-msra-2026-06-25.md  phase1-optimization-msra-2026-06-24.md
deliverables/gstack/: product-audit-msra-2026-06-24.md
deliverables/product-strategy/: competitive-analysis-msra-plugin-2026-06-25.md  optimization-evaluation-msra-2026-06-24.md
docs/: PIPELINE.md  checkpoint-unification-plan.md  class-diagram-cross-domain.mermaid  class-diagram.mermaid  integration-analysis.md  large-scale-processing-guide.md  optimization-roadmap.md  refactor-plan-sprint1-3.md  refactor-risk-assessment.md  release-workflow.md  sequence-diagram-cross-domain.mermaid  sequence-diagram.mermaid  system_design.md  system_design_cross_domain.md  table-chart-integration-plan.md  troubleshooting.md
docs/api/: bioinformatics-api.en.md  bioinformatics-api.zh.md  cross-domain-api.en.md  cross-domain-api.zh.md  medical-imaging-api.en.md  medical-imaging-api.zh.md  realtime-analytics-api.en.md  realtime-analytics-api.zh.md
docs/dev/: 00-项目总览与架构.md  01-数据准备模块.md  02-探索性因果分析模块.md  03-分析计划模块.md  04-分析执行模块.md  05-报告生成模块.md  06-论文写作模块.md  07-Agent框架设计.md  08-质量门闸体系.md  09-数据契约规范.md  10-代码模板库.md  11-现状评估与差距分析.md  12-开发文档审阅评估报告.md  13-校准模块设计.md  14-错误诊断系统设计.md  15-可重复性保障体系.md  16-大规模数据处理引擎.md  17-评估体系设计.md  18-实验性模块设计.md  19-辅助脚本与工具指南.md  20-合约系统设计.md  21-变量标准化模块.md  22-开发者工作流指南.md  23-接口设计与数据结构.md  24-异常处理规范.md  25-部署运维手册.md  26-版本变更记录规范.md  27-开发原则与规范.md  28-架构评估与重构建议.md  29-插件架构评估与重构路线图.md  31-医学信息学模块规划.md  32-公共卫生方法模块规划.md  MSRA-plugin-evaluation-20260624.md  MSRA-v1.0-optimization-report.md  MSRA开发进度表.md  harmonypy-windows-installation.md  system_design.md  system_design_cross_domain.md
docs/prd/: bioinformatics-module-prd.md  cross-domain-module-prd.md  msra_rt_prd.md
docs/reports/: competitive-analysis-report.md
docs/user_guide/: bioinformatics-tutorial.en.md  bioinformatics-tutorial.zh.md  cross-domain-tutorial.en.md  cross-domain-tutorial.zh.md  getting-started.md  medical-imaging-tutorial.en.md  medical-imaging-tutorial.zh.md  realtime-analytics-tutorial.en.md  realtime-analytics-tutorial.zh.md  troubleshooting.md
docs/角色信息/: R1-临床医生-评估报告.md  R1-临床医生.md  R10-影像科医生-评估报告.md  R10-影像科医生.md  R11-医学信息学家-评估报告.md  R11-医学信息学家.md  R11-工程任务分配.md  R11-架构师决策报告.md  R12-公共卫生研究员-评估报告.md  R12-公共卫生研究员.md  R12-工程任务分配.md  R12-架构师决策报告.md  R13-临床研究协调员-评估报告.md  R13-临床研究协调员.md  R13-架构师决策报告.md  R2-AI研究员-评估报告.md  R2-AI研究员.md  R3-数据工程师-评估报告.md  R3-数据工程师.md  R4-产品经理-评估报告.md  R4-产品经理.md  R5-架构师决策报告.md  R5-统计学家-评估报告.md  R5-统计学家.md  R6-医学期刊编辑.md  (+8 more)
examples/: example_workflow.md
msra_modules/: __init__.py  cli.py
output/: README.md  phase1-completion-summary.md
scripts/: __init__.py  benchmark_large_scale.py  check_pipeline_integrity.py  check_sprint_contract.py  eval_pipeline_gold.py  generate_msra_handoff_bundle.py  lint_gate_counts.py  lint_skill_structure.py  migrate_print_to_logging.py  run_evals.py
shared/: artifact_reproducibility_pattern.md  benchmark_report.schema.json  checkpoint_protocol.md  clinical_results_validation.md  collaboration_depth_rubric.md  compliance_checkpoint_protocol.md  compliance_report.schema.json  ground_truth_isolation_pattern.md  handoff_schemas.md  mode_spectrum.md  prisma_trAIce_protocol.md  raise_framework.md  sprint_contract.schema.json  style_calibration_protocol.md  variable_naming_standards.md
skills/: README.md  results.tsv
tests/: __init__.py  conftest.py  generate_test_data.py  msra_test_data.csv  msra_test_data_dictionary.md  run_analysis.py  run_cleaning.py  run_eda.py  run_quality_gate.py  run_report.py  run_validation.py  test_academic_output_format.py  test_agent_framework.py  test_baseline_table1.py  test_calibration.py  test_chart_understanding.py  test_compliance_checker_enhanced.py  test_dask_engine.py  test_data_profile_template.py  test_deidentification.py  test_duckdb_engine.py  test_e2e_data_pipeline.py  test_effect_size.py  test_engine_factory.py  test_engine_selector.py  test_enhanced_deliverables.py  test_language_consistency.py  test_large_scale_e2e.py  test_large_scale_integration.py  test_metrics_store.py  test_msra_handoff_bundle.py  test_passport.py  test_polars_engine.py  test_psm.py  test_quality_gates.py  test_rmst.py  test_sample_size.py  test_sap_consistency_check.py  test_sap_user_confirmation.py  test_script_execution_mode.py  (+6 more)
(+908 files in other folders)
