[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-stats-research-assistant"
version = "0.9.6"
description = "Medical Statistics Research Assistant — unified pipeline: raw data → statistical report → (optional) submittable paper"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "boangus", email = "boangus@example.com"}
]
maintainers = [
    {name = "boangus"}
]
requires-python = ">=3.9"
keywords = [
    "medical-statistics",
    "biostatistics",
    "pipeline",
    "clinical-research",
    "academic-writing",
    "paper-review",
    "rct",
    "survival-analysis",
    "causal-inference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Core (CI required)
    "pandas>=1.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    # Survival analysis
    "lifelines>=0.27",
    # Causal inference
    "dowhy>=0.11",
    "econml>=0.15",
    "causalinference>=0.1",
    # Machine learning
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.43",
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotnine>=0.12",
    # Table export
    "python-docx>=1.0",
    "openpyxl>=3.1",
    # Document parsing
    "tabula-py>=2.7",
    # Bayesian analysis
    "pymc>=5.10",
    "arviz>=0.17",
    # Prediction model
    "dcurves>=0.1",
    "simpleNomo>=0.1",
    # Instrumental variable
    "linearmodels>=5.3",
    # Regression discontinuity
    "rdrobust>=2.0",
    # Synthetic control
    "cvxpy>=1.4",
    # Large scale processing
    "polars>=1.21.0",
    "duckdb>=1.1.0",
    "dask[dataframe]>=2024.5.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pip-audit",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]
bioinformatics = [
    "scanpy>=1.9",
    "anndata>=0.9",
    "pydeseq2>=0.4",
    "gseapy>=1.0",
    "harmonypy>=0.0.9",
]
medical_imaging = [
    "nibabel>=4.0",
    "SimpleITK>=2.3",
    "pyradiomics>=3.1",
    "scikit-image>=0.20",
]

[project.urls]
Homepage = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code"
Documentation = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code#readme"
Repository = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code"
Issues = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code/issues"
Changelog = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code/blob/main/CHANGELOG.md"

[project.scripts]
# CLI entry points (if needed in future)
# msra = "msra_modules.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["msra_modules*", "shared*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741", "W503"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
