[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-stats-research-assistant"
version = "1.0.0"
description = "Medical Statistics Research Assistant — unified pipeline: raw data → statistical report → (optional) submittable paper"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "boangus", email = "boangus@example.com"}
]
maintainers = [
    {name = "boangus"}
]
requires-python = ">=3.9"
keywords = [
    "medical-statistics",
    "biostatistics",
    "pipeline",
    "clinical-research",
    "academic-writing",
    "paper-review",
    "rct",
    "survival-analysis",
    "causal-inference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
# === 核心层 (core) — CI 必需，Pipeline 基础运行 ===
# 仅这 8 个包随 `pip install medical-stats-research-assistant` 安装
# 其余统计/因果/高级建模/大规模/解析能力通过 optional-dependencies 按需安装
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
# === 统计扩展层 (stats) — 完整统计分析 ===
stats = [
    "lifelines>=0.27",           # 生存分析
    "scikit-learn>=1.3",          # ML 基础
    "seaborn>=0.13",              # 可视化
    "plotnine>=0.12",             # ggplot 风格
]

# === 因果推断层 (causal) ===
causal = [
    "dowhy>=0.11",
    "econml>=0.15",
    "causalinference>=0.1",
    "linearmodels>=5.3",          # IV
    "rdrobust>=2.0",              # RDD
    "cvxpy>=1.4",                 # 合成控制
]

# === 高级建模层 (advanced) ===
advanced = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.43",
    "pymc>=5.10",                 # 贝叶斯
    "arviz>=0.17",
    "dcurves>=0.1",               # 决策曲线
    "simpleNomo>=0.1",            # 列线图
]

# === 大规模数据处理层 (scale) ===
scale = [
    "polars>=1.21.0",
    "duckdb>=1.1.0",
    "dask[dataframe]>=2024.5.0",
]

# === 文档解析层 (parsing) ===
parsing = [
    "tabula-py>=2.7",
]

# === 扩展模块层 (已有，保持不变) ===
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pip-audit",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]
bioinformatics = [
    "scanpy>=1.9",
    "anndata>=0.9",
    "pydeseq2>=0.4",
    "gseapy>=1.0",
    "harmonypy>=0.0.9",
]
medical_imaging = [
    "nibabel>=4.0",
    "SimpleITK>=2.3",
    "pyradiomics>=3.1",
    "scikit-image>=0.20",
]
realtime_analytics = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]
cross_domain = [
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

# === 便捷安装组合 ===
# 完整统计分析能力（stats + causal + advanced + scale + parsing）
full_stats = [
    "medical-stats-research-assistant[stats,causal,advanced,scale,parsing]"
]
# 全部功能（full_stats + 扩展模块 + dev）
all = [
    "medical-stats-research-assistant[full_stats,bioinformatics,medical_imaging,realtime_analytics,cross_domain,dev]"
]

[project.urls]
Homepage = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code"
Documentation = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code#readme"
Repository = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code"
Issues = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code/issues"
Changelog = "https://github.com/boangus/medical-stats-research-assistant-for-claude-code/blob/main/CHANGELOG.md"

[project.scripts]
# CLI entry points (if needed in future)
# msra = "msra_modules.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["msra_modules*", "shared*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
